--- a/nixSitioWeb/src/app/app.component.html
+++ b/nixSitioWeb/src/app/app.component.html
@@ -68,7 +68,7 @@ body {
 <div class="topnav" id="myTopnav">
   <a href="#home" [routerLink]="['/home']" >Inicio</a>
   <a href="#estadisticas">Estadisticas</a>
-  <a [routerLink]="['/usuario']" >Perfil</a>
+  <a [routerLink]="['/perfil']" >Perfil</a>
   <a id="login" [routerLink]="['/login']" class="active">Login</a>
   <a id="registro" [routerLink]="['/register']">Registro</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
