--- a/nixSitioWeb/src/app/home/home.component.html
+++ b/nixSitioWeb/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <h1>Inicio</h1>
 
-<input type="file" (change)="cargandoImagen($event.target.files)" multiple>
+<!--<input type="file" (change)="cargandoImagen($event.target.files)" multiple>-->
