--- a/nixSitioWeb/src/app/login/login.component.html
+++ b/nixSitioWeb/src/app/login/login.component.html
@@ -17,9 +17,9 @@
     </div>
     <div class="form-group">
         <label for="pwd">Password</label>
-        <input type="password" formControlName="pwd" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Password is required</div>
+        <input type="password" formControlName="pwd" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.pwd.errors }" />
+        <div *ngIf="submitted && f.pwd.errors" class="invalid-feedback">
+            <div *ngIf="f.pwd.errors.required">Password is required</div>
         </div>
     </div>
     <div class="form-group">
