--- a/nixSitioWeb/src/app/app.component.html
+++ b/nixSitioWeb/src/app/app.component.html
@@ -66,8 +66,8 @@ body {
 <body>
 
 <div class="topnav" id="myTopnav">
-  <!--<a href="#home" [routerLink]="['/home']" >Inicio</a>
-  <a href="#estadisticas">Estadisticas</a>-->
+  <a [routerLink]="['/libroDeAgua']" >Libro De Agua</a>
+  <!--<a href="#estadisticas">Estadisticas</a>-->
   <a [routerLink]="['/perfil']" >Perfil</a>  
   <a  id="login" [routerLink]="['/login']" class="active">Login</a>
   <a id="registro" [routerLink]="['/register']">Registro</a>
