--- a/nixSitioWeb/src/app/app.component.html
+++ b/nixSitioWeb/src/app/app.component.html
@@ -67,7 +67,7 @@ body {
 
 <div class="topnav" id="myTopnav">
   <a [routerLink]="['/libroDeAgua']" >Libro De Agua</a>
-  <!--<a href="#estadisticas">Estadisticas</a>-->
+  <a [routerLink]="['/estadisticas']" >Estaditicas</a>
   <a [routerLink]="['/perfil']" >Perfil</a>  
   <a  id="login" [routerLink]="['/login']" class="active">Login</a>
   <a id="registro" [routerLink]="['/register']">Registro</a>
@@ -93,4 +93,5 @@ function myFunction() {
 
 <alert></alert>
 <router-outlet></router-outlet>
+
          
